Bright/Contrast Doesn't respect Pre-multiplied Alpha #51308

Closed
opened 2017-04-24 14:18:16 +02:00 by stephen thomas · 4 comments

System Information
Ubuntu 16.04 LTS
GeForce GTX 560 Ti

Blender Version
Broken: 2.78c
Worked: ?

Short description of error
Changing a render with a Bright/Contrast node before an Alpha Over node also changes the image it's being laid over.

Exact steps for others to reproduce the error

  • Render a scene in Cycles (should be the same in Internal) with alpha Transparency turned on.
  • Add a Bright/Contrast node to the render 'Image' output.
  • Output of Bright/Contrast goes into the bottom 'Image' input of an Alpha Over node. Set top input to a non-white/black colour (so we can see the changes with the Bright/Contrast node).
  • Alpha Over goes to composite and/or viewer node.
  • Changing values on the Bright/Contrast node changes the background colour, even though it's before the Alpha Over node in the chain.

This can be fixed by checking the 'Convert Premul' checkbox on the Alpha Over node. This adds a dark border around the rendered object. This can then be fixed by adding a 'Alpha Convert' node in front of the 'Bright/Contrast' node.

I realise that this is down to the differences in Straight and Premultiplied Alpha, so it's not necessarily a "bug", but it would be logical, in my mind, for all nodes to assume the image inputs are using the same alpha mode as the default for the rendered image. At the minute, to do a simple Alpha Over with some colour manipulation requires a couple extra steps which might throw new users.

system-info.txt

bright-contrast.blend

**System Information** Ubuntu 16.04 LTS GeForce GTX 560 Ti **Blender Version** Broken: 2.78c Worked: ? **Short description of error** Changing a render with a Bright/Contrast node before an Alpha Over node also changes the image it's being laid over. **Exact steps for others to reproduce the error** - Render a scene in Cycles (should be the same in Internal) with alpha Transparency turned on. - Add a Bright/Contrast node to the render 'Image' output. - Output of Bright/Contrast goes into the bottom 'Image' input of an Alpha Over node. Set top input to a non-white/black colour (so we can see the changes with the Bright/Contrast node). - Alpha Over goes to composite and/or viewer node. - Changing values on the Bright/Contrast node changes the background colour, even though it's before the Alpha Over node in the chain. This can be fixed by checking the 'Convert Premul' checkbox on the Alpha Over node. This adds a dark border around the rendered object. This can then be fixed by adding a 'Alpha Convert' node in front of the 'Bright/Contrast' node. I realise that this is down to the differences in Straight and Premultiplied Alpha, so it's not necessarily a "bug", but it would be logical, in my mind, for all nodes to assume the image inputs are using the same alpha mode as the default for the rendered image. At the minute, to do a simple Alpha Over with some colour manipulation requires a couple extra steps which might throw new users. [system-info.txt](https://archive.blender.org/developer/F571699/system-info.txt) [bright-contrast.blend](https://archive.blender.org/developer/F571700/bright-contrast.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @stephenthomas

Added subscriber: @stephenthomas

This issue was referenced by 8cc4c3da8c

This issue was referenced by 8cc4c3da8cbe8da197928fa821e140f4b2615c4c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51308
No description provided.